# jugaad-trader

./: .firebaserc  .gitignore  .swp  LICENSE.YOLO  LICENSE.YOLO.md  README.md  README.rst  contributing.md  dev.requirements.txt  firebase.json  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  publish-to-pypi.yml
docs/: index.md
docs/.vuepress/: config.js
examples/: upstox.py
jugaad_trader/: __init__.py  cli.py  kiteticker.py  ucli.py  upstox.py  util.py  zcli.py  zerodha.py
tests/: test_console.py  test_upstox.py  test_zerodha.py  tests_zerodha.py
